# wispy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Info.plist  LICENSE.txt  README.md  main.c  stdafx.h  wispy-c.sln  wispy-c.vcxproj  wispy.sln
.github/: CONTRIBUTING.md  PRIVACY.md  PRIVACY.txt  vcpkg.json
.github/workflows/: android.yml  codeql.yml  linux.yml  macos.yml  msbuild.yml  release.yml  windows.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: resource.pack
android/app/src/main/java/com/julesgrc0/wispy/: MainActivity.java
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/keys/: gen_b64.bat
assets/shaders/: menu_blur.android.fs  menu_blur.fs
src/: main.c  mainframe.c  mainframe.h  physac.h  resource.h  resource.rc  ressource.aps  ressource.rc  state.c  state.h  stdafx.h
src/core/: bridge.c  bridge.h  config.c  config.h  controller.c  controller.h  controls.c  controls.h  keyboard.c  keyboard.h  mainframe.c  mainframe.h  state.c  state.h  view.c  view.h
src/core/utils/: camera.c  camera.h  smooth.c  smooth.h
src/entities/: player.c  player.h
src/entity/: player.c  player.h
src/gui/: action.c  action.h  button.c  button.h  gui.c  gui.h  iconbutton.c  iconbutton.h  joystick.c  joystick.h  text.c  text.h
src/screen/: game.c  game.h  loading.c  loading.h  menu.c  menu.h
src/screens/game/: bridge.c  bridge.h  game.c  game.h
src/screens/loading/: loading.c  loading.h
src/screens/menu/: menu.c  menu.h
src/screens/menu/views/: home.c  home.h  maps.c  maps.h  settings.c  settings.h  view.h
src/terrain/: block.h  break.c  break.h  chunk.c  chunk.h  chunk_group.c  chunk_group.h  chunk_view.c  chunk_view.h  structure.c  structure.h  terrain.c  terrain.h  terrain_data.c  terrain_data.h  world.c  world.h
src/terrain/actions/: break.c  break.h
src/unpack/: unpack.c  unpack.h
tools/: desktop.json  pack_assets.py  resource.pack
